--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "child_process": "^1.0.2",
     "connect-flash": "^0.1.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "fs": "0.0.1-security",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
